@@ -2027,6 +2027,12 @@ while (!done)
       }
     *q = 0;
     len = q - dbuffer;
+    
+    /* Move the data to the end of the buffer so that a read over the end of
+    the buffer will be seen by valgrind, even if it doesn't cause a crash. */
+    
+    memmove(bptr + buffer_size - len, bptr, len);
+    bptr += buffer_size - len;  
 
     if ((all_use_dfa || use_dfa) && find_match_limit)
       {
